fix: disable scrollbar in html

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 html {
 	scroll-behavior: smooth;
+	@apply no-scrollbar
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -188,6 +189,17 @@ html {
 @layer utilities {
 	.text-balance {
 		text-wrap: balance;
+	}
+	
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
 	}
 }
 
